# homebank-to-hledger

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
specs/001-homebank-to-hledger-konverter/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/001-homebank-to-hledger-konverter/contracts/: cli.md
src/: converter.py  exceptions.py  main.py  models.py  parser.py  writer.py
tests/: test_converter.py  test_integration.py  test_parser.py  test_writer.py
