[project]
name = "homebank-to-hledger"
version = "0.1.0"
description = "Konvertiert Homebank (.xhb) Dateien in hledger Journal-Dateien"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
homebank-to-hledger = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
sources = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.9",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
